Add just a tid bit of styling

--- a/dadjokes/templates/dadjokes/index.html
+++ b/dadjokes/templates/dadjokes/index.html
@@ -1,1 +1,24 @@
-<h1>{{joke}}</h1>
+<html>
+  <style>
+   .container {
+       width: 75%;
+     margin: auto;
+     color: black;
+     background-color: white;
+     text-align: center;
+   }
+   .background {
+     background-color: green;
+     height: 100%;
+     width: 100%;
+     padding: 25px;
+   }
+  </style>
+  <body>
+    <div class="background">
+      <div class="container">
+        <h1>{{joke}}</h1>
+      </div>
+    </div>
+  </body>
+</html>
