--- a/dadjokes/templates/dadjokes/index.html
+++ b/dadjokes/templates/dadjokes/index.html
@@ -8,7 +8,7 @@
      text-align: center;
    }
    .background {
-     background-color: green;
+     background-color: pink;
      height: 100%;
      width: 100%;
      padding: 25px;
