Add Auth0 login

--- a/dadjokes/templates/dadjokes/joke.html
+++ b/dadjokes/templates/dadjokes/joke.html
@@ -15,11 +15,10 @@
    }
   </style>
   <body>
-    <div class="login-box auth0-box before">
-        <img src="https://i.cloudup.com/StzWWrY34s.png" />
-        <h3>Auth0 Example</h3>
-        <p>Zero friction identity infrastructure, built for developers</p>
-        <a class="btn btn-primary btn-lg btn-login btn-block" href="/login/auth0">Log In</a>
+    <div class="background">
+      <div class="container">
+        <h1>{{joke}}</h1>
+      </div>
     </div>
   </body>
 </html>
